--- a/vuejs/基础语法/基础语法.md
+++ b/vuejs/基础语法/基础语法.md
@@ -98,6 +98,8 @@
 
 - el : 可以传String | HTMLElement （选择器对象）
 
+  - el和template一起使用时，tempalte会自动替换el标签
+
 - data : Object |Function,组件中data必须是函数
 
 - methods:  {[key:string] : function  }
