--- a/vuejs/基础语法/基础语法.md
+++ b/vuejs/基础语法/基础语法.md
@@ -99,6 +99,39 @@
 - el : 可以传String | HTMLElement （选择器对象）
 
   - el和template一起使用时，tempalte会自动替换el标签
+  - template+component也可用底层render代替, 并且也有tempalte的作用，可替换el标签
+
+  ```js
+  new Vue({
+      el: '#app',
+      // template: '<conp></conp>',
+      // components: {conp}
+      render: function(createElement) {
+          // render入参为一个回调函数,
+          // 函数入参： 1.标签(组件的也算)[,2.属性][, 3.内容]
+      	return createElement('h2', {class: 'box'}, ['内容',createElment('button',['按钮'])])
+          // return createElement(conp)
+      }
+  })
+  ```
+
+  - VueCLI中，两种模式对比runtime-compiler/runtime-only
+
+  `runtime-compiler: template->ast->render->virDOM->UI`
+
+  `runtime-only:render->virDOM->UI `
+
+  	 runtime-only性能更高，代码量更少
+
+  - el也可替换
+
+  ```js
+  new Vue({
+      render: h=>h(App)
+  }).$mount('#app')
+  ```
+
+  
 
 - data : Object |Function,组件中data必须是函数
 
