--- a/vuejs/基础语法/基础语法.md
+++ b/vuejs/基础语法/基础语法.md
@@ -330,4 +330,17 @@ funcB(abc, event) {
 
 - v-model.trim
 
-- 
+
+## 21. eslint代码检查关闭
+
+在项目根目录创建 vue.config.js配置文件
+
+```js
+// vue.config.js
+module.exports = {
+    lintOnSave: false
+}
+```
+
+## 22. 可以给路径起别名
+
